objects/ADD_Product_Action__c.object
<CustomObject>
    <fields>
        <fullName>ADD_Product_Action_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>ADD Product Action Ext Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADD_Product_Rule__c</fullName>
        <label>ADD Product Rule</label>
        <referenceTo>ADD_Product_Rule__c</referenceTo>
        <relationshipLabel>ADD Product Action</relationshipLabel>
        <relationshipName>ADD_Product_Action</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADD_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADD Product</label>
        <referenceTo>ADD_Product__c</referenceTo>
        <relationshipLabel>ADD Product Action</relationshipLabel>
        <relationshipName>ADD_Product_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ADD Product Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ADD Product Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADD Product Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>